03.business-os/AICompanyManager/900.meta/recover_explicit_edit_db_connect_20260430_221802/030_verify.txt
[PASS] index.html exists
[PASS] server file exists
[PASS] clean core exists
INDEX_HASH_BEFORE=1c63861413b709f9ca1c8a44be3206a40c4e6f7c1ca463c263835623ab2f02bc
SERVER_HASH_BEFORE=ef80fdbf4e4c56fd698ae139d5e34160321b8dce77f7b98fe6f3c5eb0a14fc34
CORE_HASH_BEFORE=d1265793cb6b5a39bd2efdf3f24106a204ed38d7b93365e189dc7f994a55e2bb
[PASS] current clean core snapshot saved
/data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/assets/js/aicm-production-core.js:1644
      '<section class="aicm-core-card aicm-operation-card">',
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

SyntaxError: Unexpected string
    at wrapSafe (node:internal/modules/cjs/loader:1743:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.14.1
CURRENT_CORE_CHECK_CODE=1
[WARN] current clean core has syntax error; restoring from AUS-AUV backup
[PASS] clean core restored from AUS-AUV pre-patch backup
[PASS] clean core backup created for AVA-AVD-REDO
RESTORED_CORE_CHECK_CODE=0
[PASS] restored/current clean core node --check OK
PATCH_CODE=0
[PASS] explicit edit DB connect patch executed
CORE_NODE_CHECK_CODE=0
[PASS] clean core node --check OK
SERVER_NODE_CHECK_CODE=0
[PASS] server node --check OK
MARKER_COUNT=1
COMPANY_RENDERER_COUNT=1
DEPARTMENT_RENDERER_COUNT=1
SECTION_RENDERER_COUNT=1
COMPANY_ENDPOINT_COUNT=1
DEPARTMENT_ENDPOINT_COUNT=1
SECTION_ENDPOINT_COUNT=1
CONFIRM_SUMMARY_COUNT=2
OPERATION_CARD_COUNT=4
RECOMMENDED_ONLY_MARKER_COUNT=1
ROLE_SETTING_OPEN_COUNT=0
WORKER_MULTI_COUNT=2
WORKER_ADD_ACTION_COUNT=3
CONFIRM_MARKER_COUNT=1
[PASS] explicit DB connect marker exists
[PASS] company edit renderer exists once
[PASS] department edit renderer exists once
[PASS] section edit renderer exists once
[PASS] company update endpoint connected
[PASS] department update endpoint connected
[PASS] section update endpoint connected
[PASS] confirmation summary renderer connected
[PASS] operation cards exist at bottom of edit screens
[PASS] recommended-only robot combo marker remains
[PASS] role-setting-open remains absent
[PASS] worker multiple setting remains
[PASS] worker add row action remains
[PASS] DB write confirmation marker remains
FORBIDDEN_CORE_COUNT=0
INDEX_SCRIPT_COUNT=1
ISOLATED_ASYNC_COUNT=3
[PASS] core forbidden marker count OK
[PASS] production index still loads one script
[FAIL] isolated async found again
[WARN] old local UI server killed by kill -9
SERVER_PID=12638
[PASS] production server restart attempted
CONTEXT_CURL_CODE=0
CONTEXT_HTTP_CODE=200
[PASS] context HTTP 200
INDEX_CURL_CODE=0
INDEX_HTTP_CODE=200
[PASS] production index HTTP 200
INDEX_HASH_AFTER=1c63861413b709f9ca1c8a44be3206a40c4e6f7c1ca463c263835623ab2f02bc
SERVER_HASH_AFTER=ef80fdbf4e4c56fd698ae139d5e34160321b8dce77f7b98fe6f3c5eb0a14fc34
CORE_HASH_AFTER=1455735dff12eec80646425dbe65029f3422e49996115781636e19749a634f8c
[PASS] index.html unchanged
[PASS] server unchanged
[PASS] clean core changed as expected
